--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,37 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@layer tailwind-base, primevue, tailwind-utilities;
+
+@layer tailwind-base {
+  @tailwind base;
+}
+
+@layer tailwind-utilities {
+  @tailwind components;
+  @tailwind utilities;
+}
+
+:root {
+  --primary-50: 236 253 245;
+  --primary-100: 209 250 229;
+  --primary-200: 167 243 208;
+  --primary-300: 110 231 183;
+  --primary-400: 52 211 153;
+  --primary-500: 16 185 129;
+  --primary-600: 5 150 105;
+  --primary-700: 4 120 87;
+  --primary-800: 6 95 70;
+  --primary-900: 4 78 56;
+  --primary-950: 2 44 34;
+
+  --surface-0: 250 250 250;
+  --surface-50: 245 245 245;
+  --surface-100: 229 229 229;
+  --surface-200: 212 212 212;
+  --surface-300: 163 163 163;
+  --surface-400: 115 115 115;
+  --surface-500: 82 82 82;
+  --surface-600: 64 64 64;
+  --surface-700: 38 38 38;
+  --surface-800: 24 24 24;
+  --surface-900: 17 17 17;
+  --surface-950: 10 10 10;
+}
